# hinglish_transcript

./: .env.example  .gitignore  ACCURACY_IMPROVEMENTS.md  DEPLOYMENT.md  Dockerfile  HOSTING_GUIDE.md  Makefile  QUICK_DEPLOY.md  README.md  TROUBLESHOOTING.md  VERCEL_DEPLOYMENT.md  VERCEL_READY.md  WEBSITE_READY.md  cleanup_temp.py  deploy-vercel.bat  deploy.bat  deploy.sh  docker-compose.yml  env.example  example.txt  old_job.srt  pyproject.toml  requirements-vercel.txt  requirements.txt  run.py  setup.py  setup.sh  setup_api_key.py  start_production.py  vercel.json  vercel_start.py
.github/workflows/: deploy-cloudrun.yaml
api/: main.py  simple.py  vercel_handler.py  vercel_main.py
static/: style.css
